deploy: b6123222cf20946c90395694f37866ad9cd40216

--- a/iframe.html
+++ b/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CflP6daA.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-CM8dr3T7.js"></script>
   </head>
 
   <body>
