deploy: 02422fabb51a7341028d9b250be6d29b4447c307

--- a/iframe.html
+++ b/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CM8dr3T7.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-B2c-Emlc.js"></script>
   </head>
 
   <body>
