deploy: 78773a9ff7dde37c8472e294ec2a639959bec9ef

--- a/iframe.html
+++ b/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CqPkfrMk.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-DShLWoeE.js"></script>
   </head>
 
   <body>
