--- a/iframe.html
+++ b/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-DShLWoeE.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-D2z0_ihG.js"></script>
   </head>
 
   <body>
