deploy: 5f2d463584970ff4ed22d638a78b74fb2cb1725e

--- a/iframe.html
+++ b/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-D2z0_ihG.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-CUQae3l3.js"></script>
   </head>
 
   <body>
