deploy: fd5251151746c4f236c06db36b7f603654229861

--- a/iframe.html
+++ b/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-DrpBZ1Qk.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-It1sMrNh.js"></script>
   </head>
 
   <body>
