--- a/iframe.html
+++ b/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-T02PeZrL.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-Bo1Sx1Np.js"></script>
   </head>
 
   <body>
