--- a/iframe.html
+++ b/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-Cn56hZj6.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-Bxc8cJCD.js"></script>
   </head>
 
   <body>
