deploy: 806b628035941c794413867cf75720519ee08fda

--- a/iframe.html
+++ b/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-Bxc8cJCD.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BQoqIMe9.js"></script>
   </head>
 
   <body>
