deploy: 60bf76641fea50c81686c4b5e7067eb1984b4465

--- a/iframe.html
+++ b/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-D7DOKx_C.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-Bs1Vlac4.js"></script>
   </head>
 
   <body>
