deploy: 3b6e46f0af3a0b66489ac1a2af4cc6cb0628407a

--- a/iframe.html
+++ b/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-BROcIzYc.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-DCaFh3c-.js"></script>
   </head>
 
   <body>
