deploy: 2ad691ede91778c9a83a4bd99f64947c2490c685

--- a/iframe.html
+++ b/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-Deri2mpT.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-CaFDdy8Y.js"></script>
   </head>
 
   <body>
