deploy: 510f3423c3569ea0af4dc6ce7ee8ebe7b747e80b

--- a/iframe.html
+++ b/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-BN643zx1.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-DPlPPEvF.js"></script>
   </head>
 
   <body>
