deploy: 6d73af166f46d794e42fa3bf130e5a707cc4f000

--- a/iframe.html
+++ b/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-BZtVoBAR.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BRD-FGcB.js"></script>
   </head>
 
   <body>
