--- a/iframe.html
+++ b/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-C--CqPYO.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-1bsNakzE.js"></script>
   </head>
 
   <body>
