deploy: fd307e0c9cabd782f772ece649e1f48c8827790b

--- a/iframe.html
+++ b/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-1bsNakzE.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-HRmKDzhR.js"></script>
   </head>
 
   <body>
