deploy: ee22b832f6ba52674f5c2b96d656df24149ad67c

--- a/iframe.html
+++ b/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-HRmKDzhR.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BC6cXllx.js"></script>
   </head>
 
   <body>
