deploy: 232fdeb056bcc24cbb27aff426a13a07608efc91

--- a/iframe.html
+++ b/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-DUNgOh5k.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BBhNFtHl.js"></script>
   </head>
 
   <body>
