deploy: bb6879f19768051b35ef7e16c7b876a594d83a01

--- a/iframe.html
+++ b/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-BBhNFtHl.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BXHhTb1L.js"></script>
   </head>
 
   <body>
