--- a/iframe.html
+++ b/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-DB0tGb-a.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-s6azLOOD.js"></script>
   </head>
 
   <body>
