deploy: 059ee2d33692998021e2b631abbd173e762d0765

--- a/iframe.html
+++ b/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-N-he2MVu.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-B8NnD7Ul.js"></script>
   </head>
 
   <body>
