deploy: 349fe564b4cf3ffaddc3ceb3fc2e28c37acfe572

--- a/iframe.html
+++ b/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-B8NnD7Ul.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-B2V_gn2A.js"></script>
   </head>
 
   <body>
