--- a/iframe.html
+++ b/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-B2V_gn2A.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-gS4Bd5eT.js"></script>
   </head>
 
   <body>
