deploy: 7e3f0a466458b4e303b99c8ac3b448683d715bd5

--- a/iframe.html
+++ b/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-gS4Bd5eT.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-C2DjnpM0.js"></script>
   </head>
 
   <body>
