deploy: 803696bd2f50f3e23a8388c29bd6168f7d4fea0a

--- a/iframe.html
+++ b/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-foHiVGLQ.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-DDSb_GrT.js"></script>
   </head>
 
   <body>
