deploy: 07112f3446e60752c192f77bdc46ed74a56790f5

--- a/iframe.html
+++ b/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-DXt-uur6.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-kg0i8rTQ.js"></script>
   </head>
 
   <body>
