--- a/iframe.html
+++ b/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-C_x8jurK.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-eR00w7_n.js"></script>
   </head>
 
   <body>
